@startuml domain-model
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

skinparam packageStyle rectangle
'left to right direction


package "<<Aggregate>> Contrato" #5D9B9B {
    entity Contrato <<entity>> <<root>>
    class DataInicioContrato <<Value Object>>
    class DataFimContrato <<Value Object>>
    enum TipoContrato <<Value Object>> {
        Docente
        Investigador
        Bolseiro
    }
    class SalarioMensal <<Value Object>>
}


package "<<Aggregate>> CargaMensal" #6C6874 {
    entity CargaMensal <<entity>> <<root>>
    class JornadaDiaria <<Value Object>>
    class DiasUteisTrabalhaveis <<Value Object>>
    '* Horas potencias trabalháveis = jornada * dias
    class DiasFeriasBaixasLiencasFaltas <<Value Object>>
    class SalarioBase <<Value Object>>
    '* horas de férias/baixas/etc é dias de férias/coiso * jornada
    class TaxaSocialUnica <<Value Object>>
    class MesAno <<Value Object>> {
        DateTime
    }
}


package "<<Aggregate>> Pessoa" #999950 {
    entity Pessoa <<entity>> <<root>>
    class NomePessoa <<Value Object>>
    class Email <<Value Object>>
    class CienciaID <<Value Object>>
    class UltimoPedidoPagamento <<Value Object>> {
        DateTime
    }
}

package "<<Aggregate>> Projeto" #00BB2D {
    entity Projeto <<entity>> <<root>>
    class Titulo <<Value Object>>
    class Numero <<Value Object>>
}

JornadaDiaria <- CargaMensal
CargaMensal --> DiasUteisTrabalhaveis
CargaMensal --> DiasFeriasBaixasLiencasFaltas
CargaMensal --> SalarioBase
CargaMensal --> TaxaSocialUnica
CargaMensal "*" --> MesAno

Contrato --> DataInicioContrato
Contrato --> DataFimContrato
Contrato --> TipoContrato
Contrato --> SalarioMensal


Pessoa --> NomePessoa
Pessoa --> Email
Pessoa --> CienciaID 
Pessoa "1" ---> "1" Contrato
Pessoa "1" ---> "*" CargaMensal
Pessoa -->  UltimoPedidoPagamento

Projeto --> Titulo
Projeto --> Numero
Projeto "*" ---> "*" Pessoa


@enduml